4 errors but we're making progress

--- a/Assignment_2.csproj
+++ b/Assignment_2.csproj
@@ -50,7 +50,17 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Remove="Data\WeatherForecast.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <MauiXaml Update="FlightsGrid.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </MauiXaml>
     </ItemGroup>
 
 </Project>
