--- a/Assignment_2.csproj
+++ b/Assignment_2.csproj
@@ -57,4 +57,19 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="FlightsResource.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>FlightsResource.resx</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="FlightsResource.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>FlightsResource.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
 </Project>
